Fixed input in edit activity.

--- a/Did I/AndroidManifest.xml
+++ b/Did I/AndroidManifest.xml
@@ -21,7 +21,8 @@
             </intent-filter>
         </activity>
         <activity 
-            android:name=".EditHabits"/>
+            android:name=".EditHabits"
+            android:windowSoftInputMode="adjustPan"/>
     </application>
 
 </manifest>
