--- a/Did I/AndroidManifest.xml
+++ b/Did I/AndroidManifest.xml
@@ -11,6 +11,9 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <receiver android:name=".AlarmReceiver" >
+        </receiver>
+
         <activity
             android:name=".Main"
             android:label="@string/title_activity_main" >
@@ -20,9 +23,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity 
+        <activity
             android:name=".EditHabits"
-            android:windowSoftInputMode="adjustPan"/>
+            android:windowSoftInputMode="adjustPan" />
     </application>
 
 </manifest>
